Use assert and const. Added #include <stdio.h> to headers.
git-svn-id: http://ceres/FrontSTR/svn/meshtools/trunk@36 f889add8-8e12-0410-85aa-139c134ed86c

--- a/Makefile.win
+++ b/Makefile.win
@@ -1,13 +1,14 @@
 PREFIX = $(HOME)/hecmw
 BINDIR = $(PREFIX)/bin
 
-#CC = bcc32
-CC = cl
+CC = bcc32
+#CC = cl
 
-#WARNFLAGS = -w
-WARNFLAGS = -Wall
+WARNFLAGS = -w
+#WARNFLAGS = -Wall
 #DEBUGFLAGS = -g
-#OPTFLAGS = -O3 -fomit-frame-pointer -ffast-math -funroll-loops
+#DEBUGFLAGS = -DNDEBUG
+OPTFLAGS = -O2
 
 CFLAGS = $(WARNFLAGS) $(DEBUGFLAGS) $(OPTFLAGS)
 LDFLAGS =
