Changed rf341to342 not to use elemdata to reduce memory usage.
git-svn-id: http://ceres/FrontSTR/svn/meshtools/trunk@50 f889add8-8e12-0410-85aa-139c134ed86c

--- a/Makefile.win
+++ b/Makefile.win
@@ -22,7 +22,7 @@ PROGS = rf341to342 sd342to341 meshcount fstr2adv
 
 all: $(PROGS)
 
-rf341to342: rf341to342.obj util.obj meshio.obj nodedata.obj edgedata.obj elemdata.obj
+rf341to342: rf341to342.obj util.obj meshio.obj nodedata.obj edgedata.obj
 	$(CC) $(CFLAGS) $^ $(LDFLAGS)
 
 sd342to341: sd342to341.obj util.obj meshio.obj nodedata.obj
